[project]
name = "comfyui-propost"
description = "A set of custom ComfyUI nodes for performing basic post-processing effects including Film Grain and Vignette. These effects can help to take the edge off AI imagery and make them feel more natural."
version = "1.1.3"
license = { text = "MIT License" }
dependencies = ["numpy", "Pillow", "opencv-python", "colour-science"]

[project.urls]
Repository = "https://github.com/digitaljohn/comfyui-propost"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "digital"
DisplayName = "comfyui-propost"
Icon = ""
